<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/zuimei_home_one"
        android:icon="@drawable/zuimei_bottom_nav_ic_selector_one"
        android:title="@string/zuimei_home_nav_one"/>

    <item
        android:id="@+id/zuimei_home_two"
        android:icon="@drawable/zuimei_bottom_nav_ic_selector_two"
        android:title="@string/zuimei_home_nav_two"/>

    <item
        android:id="@+id/zuimei_home_three"
        android:icon="@drawable/zuimei_bottom_nav_ic_selector_three"
        android:title="@string/zuimei_home_nav_three"/>

    <item
        android:id="@+id/zuimei_home_four"
        android:icon="@drawable/zuimei_bottom_nav_ic_selector_four"
        android:title="@string/zuimei_home_nav_four"/>
</menu>